# move-me

./: README.md  pyproject.toml  test_overlay.py
.github/: copilot-instructions.md
move_me/: __init__.py  main.py
move_me/config/: default_config.json  manager.py
move_me/core/: notifications.py  overlay.py  state.py  timer.py
move_me/monitors/: __init__.py
move_me/utils/: logger.py
tests/: test_overlay.py
